FIX: SecurityConfig.java